--- a/codegen.yaml
+++ b/codegen.yaml
@@ -1,7 +1,11 @@
 schema: 'http://localhost:4000'
+documents: "./src/graphql/*.gql"
 generates:
   ./src/types/generated/types.ts:
     plugins:
       - typescript
+      - typescript-operations
+      - typescript-react-apollo
     config:
       typesPrefix: I
+      withHooks: true
