--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
@@ -26,6 +27,8 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "3.3.1",
+    "@graphql-codegen/client-preset": "3.0.1",
+    "@graphql-codegen/typed-document-node": "^4.0.1",
     "@graphql-codegen/typescript": "^3.0.4",
     "@graphql-codegen/typescript-operations": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
@@ -43,7 +46,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.2",
-    "@graphql-codegen/client-preset": "3.0.1"
+    "tailwindcss": "^3.3.2"
   }
 }
