--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.4",
     "graphql": "^16.6.0",
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "tailwind-datepicker-react": "^1.3.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
