--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
-    "flowbite": "^1.6.5",
-    "flowbite-react": "^0.4.4",
+    "date-fns": "^2.30.0",
     "graphql": "^16.6.0",
     "next": "13.3.4",
     "react": "18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "tailwind-datepicker-react": "^1.3.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
@@ -35,6 +34,7 @@
     "@graphql-codegen/typed-document-node": "^4.0.1",
     "@graphql-codegen/typescript": "^3.0.4",
     "@graphql-codegen/typescript-operations": "^3.0.4",
+    "@types/react-datepicker": "^4.11.2",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "autoprefixer": "^10.4.14",
