--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "env-cmd -f env/.env.local next dev",
+    "dev": "env-cmd -f env/.env.test next dev",
     "build": "env-cmd -f env/.env.dev next build",
     "start": "env-cmd -f env/.env.dev next start -p 3001",
     "lint": "next lint",
