--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "tw-elements": "^1.0.0-beta2",
     "typescript": "5.0.4",
     "yup": "^1.1.1"
   },
