--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.30.0",
     "env-cmd": "^10.1.0",
     "graphql": "^16.6.0",
+    "graphql-ws": "^5.13.1",
     "jwt-decode": "^3.1.2",
     "next": "13.3.4",
     "next-auth": "^4.22.1",
