--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "env-cmd -f env/.env.test next dev",
-    "build": "env-cmd -f env/.env.dev next build",
-    "start": "env-cmd -f env/.env.dev next start -p 3001",
+    "dev": "env-cmd -f env/.env.local next dev",
+    "test": "env-cmd -f env/.env.test next dev",
+    "build:dev": "env-cmd -f env/.env.dev next build",
+    "build:prod": "next build",
+    "start:dev": "env-cmd -f env/.env.dev next start -p 3001",
+    "start:prod": "env-cmd -f env/.env.prod next start -p 3001",
     "lint": "next lint",
     "codegen": "graphql-codegen --config codegen.ts",
     "generate": "graphql-codegen"
@@ -32,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-select": "^5.7.3",
     "tw-elements": "^1.0.0-beta2",
     "typescript": "5.0.4",
     "yup": "^1.1.1"
@@ -43,6 +47,7 @@
     "@graphql-codegen/typescript": "^3.0.4",
     "@graphql-codegen/typescript-operations": "^3.0.4",
     "@types/react-datepicker": "^4.11.2",
+    "@types/react-select": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "autoprefixer": "^10.4.14",
