--- a/env/.env.test
+++ b/env/.env.test
@@ -1,4 +1,4 @@
 NODE_ENV=test
 NEXT_PUBLIC_BASE_API=http://localhost:4000
-NEXT_PUBLIC_PORT=
+NEXT_PUBLIC_BASE_PROFILE_API=http://localhost:4000/employees
 NEXT_PUBLIC_NAME='test'
