--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-select": "^5.7.3",
+    "react-tailwindcss-datepicker": "^1.6.3",
     "tw-elements": "^1.0.0-beta2",
     "typescript": "5.0.4",
     "yup": "^1.1.1"
