--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-js-pagination": "^3.0.3",
     "react-select": "^5.7.3",
     "react-tailwindcss-datepicker": "^1.6.3",
     "tw-elements": "^1.0.0-beta2",
@@ -48,6 +49,7 @@
     "@graphql-codegen/typescript": "^3.0.4",
     "@graphql-codegen/typescript-operations": "^3.0.4",
     "@types/react-datepicker": "^4.11.2",
+    "@types/react-js-pagination": "^3.0.4",
     "@types/react-select": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
