FIX - 근태관리 ws link 설정 수정
### DESC
- 개발 및 로컬 서버에서도 web socket link 작동하도록 수정

--- a/env/.env.test
+++ b/env/.env.test
@@ -2,3 +2,4 @@ NODE_ENV=test
 NEXT_PUBLIC_BASE_API=http://localhost:4000
 NEXT_PUBLIC_BASE_PROFILE_API=http://localhost:4000/employees
 NEXT_PUBLIC_NAME='test'
+NEXT_PUBLIC_BASE_WS=localhost:4000/subscription
