--- a/env/.env.dev
+++ b/env/.env.dev
@@ -3,3 +3,4 @@ NEXT_PUBLIC_BASE_API=http://192.168.0.201:8080/graphql
 NEXT_PUBLIC_PORT=
 NEXT_PUBLIC_NAME='dev'
 NEXT_PUBLIC_BASE_PROFILE_API=http://192.168.0.201/employees
+NEXT_PUBLIC_BASE_WS=192.168.0.201:8080/subscription
