--- a/env/.env.local
+++ b/env/.env.local
@@ -3,4 +3,4 @@ NEXT_PUBLIC_BASE_API=http://localhost:8080/graphql
 NEXT_PUBLIC_PORT=
 NEXT_PUBLIC_NAME='local dev'
 NEXT_PUBLIC_BASE_PROFILE_API=http://192.168.0.201/employees
-NEXT_PUBLIC_BASE_WS=localhost:8080/subscription
+NEXT_PUBLIC_BASE_WS=localhost:8080/graphql
