--- a/env/.env.test
+++ b/env/.env.test
@@ -1,5 +1,5 @@
 NODE_ENV=test
 NEXT_PUBLIC_BASE_API=http://localhost:4000
-NEXT_PUBLIC_BASE_PROFILE_API=http://localhost:4000/employees
+NEXT_PUBLIC_BASE_PROFILE_API=http://localhost:4000
 NEXT_PUBLIC_NAME='test'
 NEXT_PUBLIC_BASE_WS=localhost:4000/subscription
