--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "apollo-upload-client": "^17.0.0",
     "date-fns": "^2.30.0",
     "env-cmd": "^10.1.0",
     "graphql": "^16.6.0",
@@ -48,6 +49,7 @@
     "@graphql-codegen/typed-document-node": "^4.0.1",
     "@graphql-codegen/typescript": "^3.0.4",
     "@graphql-codegen/typescript-operations": "^3.0.4",
+    "@types/apollo-upload-client": "^17.0.2",
     "@types/react-datepicker": "^4.11.2",
     "@types/react-js-pagination": "^3.0.4",
     "@types/react-select": "^5.0.1",
