--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-js-pagination": "^3.0.3",
     "react-select": "^5.7.3",
     "react-tailwindcss-datepicker": "^1.6.3",
+    "sweetalert": "^2.1.2",
     "tw-elements": "^1.0.0-beta2",
     "typescript": "5.0.4",
     "yup": "^1.1.1"
